Fix side-by-side code format & commit message wrap

--- a/app/assets/stylesheets/pages/diff.scss
+++ b/app/assets/stylesheets/pages/diff.scss
@@ -109,6 +109,10 @@
         display: table-cell;
       }
     }
+
+    .text-file.diff-wrap-lines table .line_holder td span {
+      white-space: pre-wrap;
+    }
   }
   .image {
     background: #ddd;
